--- a/index.ipynb
+++ b/index.ipynb
@@ -53,24 +53,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number = 10\n",
+    "while number < 10 :\n",
+    "    print('number is', number)\n",
+    "    number -= 1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-9-cfb2a59e3b53>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-9-cfb2a59e3b53>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    while npl < 5.0 # max rate for non-performing loans\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value is 10\n",
+      "Value is 9\n",
+      "Value is 8\n",
+      "Value is 7\n",
+      "Value is 6\n",
+      "Value is 5\n",
+      "Value is 4\n"
      ]
     }
    ],
    "source": [
-    "npl = 1.5 # minimun percentage of non-performing loans\n",
-    "while npl < 5.0  # max rate for non-performing loans\n",
+    "number = 10\n",
+    "while number > 3:\n",
+    "    print('Value is', number)\n",
+    "    number -= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number = - 10\n",
+    "while number > 3:\n",
+    "    print('Value is', number)\n",
+    "    number == number - 1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-17-fb6201cb8c60>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-17-fb6201cb8c60>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    while number = 0\u001b[0m\n\u001b[1;37m                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 4\n",
+    "while number = 0\n",
+    "print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number is 2\n",
+      "Number is 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# must have a condition that must be met\n",
+    "number = 2\n",
+    "while number > 0:\n",
+    "    print('Number is', number)\n",
+    "    number = number - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number is 1\n",
+      "Number is 2\n",
+      "Number is 3\n",
+      "Number is 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pools from a collection (list/dict)\n",
+    "number = [1, 2, 3, 4]\n",
+    "for item in number:\n",
+    "    print('Number is', item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5\n",
+      "2.0\n",
+      "2.5\n",
+      "3.0\n",
+      "3.5\n",
+      "4.0\n",
+      "4.5\n",
+      "The npl reached 5.0 so the while loop's condition became FALSE and resulted to penalties\n"
+     ]
+    }
+   ],
+   "source": [
+    "npl = 1.5 # minimum percentage of non-performing loans\n",
+    "while npl < 5.0:  # max rate for non-performing loans\n",
     "    print(npl)\n",
     "    npl += 0.5\n",
-    "print(\"The npl reached\", npl, \"so the while loop's condition became FALSE and stopped executing\")"
+    "print(\"The npl reached\", npl, \"so the while loop's condition became FALSE and resulted to penalties\")"
    ]
   },
   {
